fix: centrar recuadro de login en la columna derecha

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "LOGIN": {
-    "TITLE": "Welcome to EliTech!",
-    "EMAIL": "Email",
+    "TITLE": "Welcome to Onesite!",
+    "EMAIL": "Username",
     "PASSWORD": "Password",
     "SUBMIT": "Log In",
     "LANGUAGE": "Language"
