--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -1,7 +1,7 @@
 {
   "LOGIN": {
-    "TITLE": "¡Bienvenido a EliTech!",
-    "EMAIL": "Correo electrónico",
+    "TITLE": "¡Bienvenido a Onesite!",
+    "EMAIL": "Usuario",
     "PASSWORD": "Contraseña",
     "SUBMIT": "Iniciar sesión",
     "LANGUAGE": "Idioma"
