--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -23,7 +23,7 @@
   },
   "DASHBOARD": {
     "TITLE": "Panel de Control",
-    "SUBTITLE": "Bienvenido al sistema OneSite",
+    "SUBTITLE": "Bienvenido a OneSite",
     "STATS": {
       "TOTAL_TRUCKS": "Total de Camiones",
       "ACTIVE_TRUCKS": "Camiones Activos",
