--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -17,6 +17,9 @@
   },
   "SIDEBAR": {
     "TRUCKS": "Camiones",
+    "E_COMMERCE": "E-commerce",
+    "EXTRA_COSTS": "Extra Costos",
+    "DISPATCH_GROUPS": "Grupos de Despacho",
     "COSTS": "Costos",
     "REPORTS": "Reportes",
     "PERMISSIONS": "Permisos"
