feat: Agregar submenús al módulo de Camiones - Control de Camiones y Control de Camiones WMT

--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -17,6 +17,8 @@
   },
   "SIDEBAR": {
     "TRUCKS": "Camiones",
+    "TRUCK_CONTROL": "Control de Camiones",
+    "TRUCK_CONTROL_WMT": "Control de Camiones WMT",
     "E_COMMERCE": "E-commerce",
     "EXTRA_COSTS": "Extra Costos",
     "DISPATCH_GROUPS": "Grupos de Despacho",
