--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -17,6 +17,8 @@
   },
   "SIDEBAR": {
     "TRUCKS": "Trucks",
+    "TRUCK_CONTROL": "Truck Control",
+    "TRUCK_CONTROL_WMT": "Truck Control WMT",
     "E_COMMERCE": "E-commerce",
     "EXTRA_COSTS": "Extra Costs",
     "DISPATCH_GROUPS": "Dispatch Groups",
