feat: Agregar submenús al módulo de Auditorías - Auditoría de Camiones y Auditoría de Bodegas

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -26,6 +26,8 @@
     "REPORTS": "Reports",
     "PERMISSIONS": "Permissions",
     "AUDITS": "Audits",
+    "AUDIT_TRUCKS": "Truck Audits",
+    "AUDIT_WAREHOUSES": "Warehouse Audits",
     "DISPATCHES": "Dispatches",
     "RPA": "RPA"
   },
