feat: ajustes finales de compactación y estilo en filtros de camiones

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -36,16 +36,16 @@
     "MENU": {
       "DASHBOARD": "Dashboard",
       "TRUCKS": "Trucks",
-      "TRUCKS_CONTROL": "Trucks Control",
-      "TRUCKS_CONTROL_WMT": "Trucks Control WMT",
+      "TRUCKS_CONTROL": "Trucks control",
+      "TRUCKS_CONTROL_WMT": "Trucks control WMT",
       "COSTS": "Costs",
       "E_COMMERCE": "E-commerce",
-      "EXTRA_COSTS": "Extra Costs",
-      "DISPATCH_GROUPS": "Dispatch Groups",
+      "EXTRA_COSTS": "Extra costs",
+      "DISPATCH_GROUPS": "Dispatch groups",
       "REPORTS": "Reports",
       "AUDITS": "Audits",
-      "AUDITS_TRUCKS": "Trucks Audit",
-      "AUDITS_WAREHOUSE": "Warehouse Audit",
+      "AUDITS_TRUCKS": "Trucks audit",
+      "AUDITS_WAREHOUSE": "Warehouse audit",
       "DISPATCHES": "Dispatches",
       "RPA": "RPA",
       "PERMISSIONS": "Permissions"
