--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -43,7 +43,7 @@
     }
   },
   "DASHBOARD": {
-    "TITLE": "Panel de Control",
+    "TITLE": "Panel de control",
     "WELCOME": "¡Bienvenido a OneSite!",
     "DESCRIPTION": "Selecciona una opción del menú lateral para comenzar."
   },
