Mejoras visuales y funcionales en filtros y botones de la pantalla de camiones: colapsar/expandir, alineación de iconos, estilos y componentes reutilizables

--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -105,7 +105,7 @@
   "TRUCKS": {
     "LIST": {
       "TITLE": "Liste des camions",
-      "CREATE_NEW": "Créer nouveau",
+      "CREATE_NEW": "NEW",
       "FILTERS": "Filtres",
       "SHOWING": "Affichage",
       "OF": "sur",
