--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -105,7 +105,7 @@
   "TRUCKS": {
     "LIST": {
       "TITLE": "Trucks List",
-      "CREATE_NEW": "Create New",
+      "CREATE_NEW": "NEW",
       "FILTERS": "Filters",
       "SHOWING": "Showing",
       "OF": "of",
