--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -88,7 +88,7 @@
   "TRUCKS": {
     "LIST": {
       "TITLE": "Listado de Camiones",
-      "CREATE_NEW": "Crear Nuevo",
+      "CREATE_NEW": "NEW",
       "FILTERS": "Filtros",
       "SHOWING": "Mostrando",
       "OF": "de",
