--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -88,7 +88,7 @@
   "TRUCKS": {
     "LIST": {
       "TITLE": "Listado de Camiones",
-      "CREATE_NEW": "NEW",
+      "CREATE_NEW": "Nuevo",
       "FILTERS": "Filtros",
       "SHOWING": "Mostrando",
       "OF": "de",
@@ -119,6 +119,7 @@
     "LOADING": "Cargando...",
     "PREVIOUS": "Anterior",
     "NEXT": "Siguiente",
-    "ACTIONS": "Acciones"
+    "ACTIONS": "Acciones",
+    "CANCEL": "Cancelar"
   }
 } 
