--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -15,7 +15,8 @@
     "PREVIOUS": "Précédent",
     "NEXT": "Suivant",
     "ACTIONS": "Actions",
-    "CANCEL": "Annuler"
+    "CANCEL": "Annuler",
+    "CLOSE": "Fermer"
   },
   "LOGIN": {
     "TITLE": "Bienvenue sur OneSite",
@@ -115,7 +116,15 @@
       "SHIP_DATE_FROM": "Date d'expédition depuis",
       "SHIP_DATE_TO": "Date d'expédition jusqu'à",
       "DELIV_DATE_FROM": "Date de livraison depuis",
-      "DELIV_DATE_TO": "Date de livraison jusqu'à"
+      "DELIV_DATE_TO": "Date de livraison jusqu'à",
+      "COLUMN_SELECTOR": {
+        "BUTTON": "Colonnes",
+        "BUTTON_TITLE": "Sélectionner les colonnes visibles",
+        "TITLE": "Sélectionner les colonnes",
+        "DESCRIPTION": "Cochez les colonnes que vous souhaitez afficher dans le tableau :",
+        "SELECT_ALL": "Tout sélectionner",
+        "DESELECT_ALL": "Tout désélectionner"
+      }
     },
     "DETAIL": {
       "TITLE": "Détails du camion",
