feat: implementar funcionalidad completa de login con autenticación AD
- Crear AuthService para manejo de autenticación
- Implementar lógica de login en LoginComponent
- Agregar validaciones de formulario y manejo de errores
- Crear archivos de environment para configuración
- Actualizar traducciones con nuevos mensajes
- Mejorar estilos CSS del formulario de login
- Agregar HttpClientModule al SharedModule
- Implementar estado de carga y feedback visual

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -28,6 +28,17 @@
     "PASSWORD_PLACEHOLDER": "Enter your password",
     "LOGIN_BUTTON": "Login",
     "LOGGING_IN": "Logging in...",
+    "SUCCESS_MESSAGE": "Login successful!",
+    "ERROR_GENERIC": "Login error. Please try again.",
+    "ERROR_INVALID_CREDENTIALS": "Invalid username or password.",
+    "ERROR_TOO_MANY_ATTEMPTS": "Too many failed attempts. Please try again later.",
+    "ERROR_SERVER_UNAVAILABLE": "Server unavailable. Please try again later.",
+    "USERNAME_REQUIRED": "Username is required",
+    "PASSWORD_REQUIRED": "Password is required",
+    "PASSWORD_MIN_LENGTH": "Password must be at least 6 characters",
+    "TEST_CONNECTION": "Test Connection",
+    "CONNECTION_SUCCESS": "Connection successful with server",
+    "CONNECTION_ERROR": "Connection error with server",
     "ERROR": {
       "TITLE": "Authentication Error",
       "MESSAGE": "Incorrect username or password.",
