--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -36,6 +36,17 @@
     "PASSWORD_PLACEHOLDER": "Ingresa tu contraseña",
     "LOGIN_BUTTON": "Iniciar Sesión",
     "LOGGING_IN": "Iniciando sesión...",
+    "SUCCESS_MESSAGE": "¡Inicio de sesión exitoso!",
+    "ERROR_GENERIC": "Error al iniciar sesión. Inténtalo de nuevo.",
+    "ERROR_INVALID_CREDENTIALS": "Usuario o contraseña incorrectos.",
+    "ERROR_TOO_MANY_ATTEMPTS": "Demasiados intentos fallidos. Inténtalo más tarde.",
+    "ERROR_SERVER_UNAVAILABLE": "Servidor no disponible. Inténtalo más tarde.",
+    "USERNAME_REQUIRED": "El usuario es requerido",
+    "PASSWORD_REQUIRED": "La contraseña es requerida",
+    "PASSWORD_MIN_LENGTH": "La contraseña debe tener al menos 6 caracteres",
+    "TEST_CONNECTION": "Probar Conexión",
+    "CONNECTION_SUCCESS": "Conexión exitosa con el servidor",
+    "CONNECTION_ERROR": "Error de conexión con el servidor",
     "ERROR": {
       "TITLE": "Error de autenticación",
       "MESSAGE": "Usuario o contraseña incorrectos.",
