--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -31,6 +31,8 @@
     "SUCCESS_MESSAGE": "Login successful!",
     "ERROR_GENERIC": "Login error. Please try again.",
     "ERROR_INVALID_CREDENTIALS": "Invalid username or password.",
+    "ERROR_ACCOUNT_LOCKED": "Account locked due to multiple failed attempts. Contact administrator.",
+    "ERROR_USER_NOT_FOUND": "User not found in the system.",
     "ERROR_TOO_MANY_ATTEMPTS": "Too many failed attempts. Please try again later.",
     "ERROR_SERVER_UNAVAILABLE": "Server unavailable. Please try again later.",
     "USERNAME_REQUIRED": "Username is required",
