--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -39,6 +39,8 @@
     "SUCCESS_MESSAGE": "¡Inicio de sesión exitoso!",
     "ERROR_GENERIC": "Error al iniciar sesión. Inténtalo de nuevo.",
     "ERROR_INVALID_CREDENTIALS": "Usuario o contraseña incorrectos.",
+    "ERROR_ACCOUNT_LOCKED": "Cuenta bloqueada por múltiples intentos fallidos. Contacta al administrador.",
+    "ERROR_USER_NOT_FOUND": "Usuario no encontrado en el sistema.",
     "ERROR_TOO_MANY_ATTEMPTS": "Demasiados intentos fallidos. Inténtalo más tarde.",
     "ERROR_SERVER_UNAVAILABLE": "Servidor no disponible. Inténtalo más tarde.",
     "USERNAME_REQUIRED": "El usuario es requerido",
